[tool.poetry]
name = "wlc"
version = "0.1.0"
description = ""
authors = ["Davide Mezzogori <dmezzogori@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
simpy = "^4.1.1"
matplotlib = "^3.8.2"
sortedcontainers = "^2.4.0"
jupyter = "^1.0.0"
progressbar = "^2.5"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
sortedcontainers-stubs = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
